Pass topmost suggestion type instead of image id when image changes.

Moves the logic to retrieve the image for the topmost suggestion in the
omnibox from omnibox_popup_view_ios to the left image consumer.

Bug: 865000
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I1b839bb546d5aa652e7db87c91fe88fcbc2b594e
Reviewed-on: https://chromium-review.googlesource.com/1143184
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576476}