ios/chrome/browser/ui/location_bar/location_bar_legacy_view.mm
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "ios/chrome/browser/ui/animation_util.h"
 #import "ios/chrome/browser/ui/omnibox/clipping_textfield_container.h"
 #import "ios/chrome/browser/ui/omnibox/omnibox_text_field_ios.h"
+#include "ios/chrome/browser/ui/omnibox/omnibox_util.h"
 #include "ios/chrome/browser/ui/rtl_geometry.h"
 #include "ios/chrome/browser/ui/ui_util.h"
 #import "ios/chrome/browser/ui/uikit_ui_util.h"
@@ -316,8 +317,10 @@ const LayoutOffset kPositionAnimationLeadingOffset = -10;
 
 #pragma mark - OmniboxLeftImageConsumer
 
-- (void)setLeftImageId:(int)imageId {
-  [self setPlaceholderImage:imageId];
+- (void)setLeftImageForAutocompleteType:(AutocompleteMatchType::Type)type {
+  int image_id = GetIconForAutocompleteMatchType(type, /* is_starred */ false,
+                                                 /* is_incognito */ false);
+  [self setPlaceholderImage:image_id];
 }
 
 @end
